# amira-rust-asr-server

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CLAUDE_ROADMAP.md  Cargo.toml  Dockerfile  GEMINI_ROADMAP.md  HPC.md  HPC_transcript.md  LICENSE  PERFORMANCE.md  PHASE1_RESULTS.md  README-models.md  README.md  REFACTORING.md  RELEASE_PLAN.md  ROADMAP.md  build.rs  config.toml  config.yaml  docker-compose.observability.yml  docker-compose.yml  setup_dependencies.sh  wav2vec-template.json
.github/workflows/: ci.yml
benches/: connection_pool_bench.rs  memory_pool_bench.rs  phase1_benchmarks.rs  simd_benchmarks.rs  simple_bench.rs  simple_simd_bench.rs
config/: prometheus.yml
docs/: Architecture.md  Models.md  Operations.md  Overview.md  Performance.md  README.md  Roadmap.md
docs/legacy/: CLAUDE.md  README-models.md  README.md  TODO.md
examples/: performance_demo.rs  simple_client.rs
model-repo/asr_ensemble/: config.pbtxt
model-repo/decoder_joint/: config.pbtxt
model-repo/decoder_joint/1/: model.onnx
model-repo/encoder/: config.pbtxt
model-repo/encoder/1/: encoder-model.onnx.data  model.onnx
model-repo/k2_decoder/: config.pbtxt
model-repo/preprocessor/: config.pbtxt
model-repo/preprocessor/1/: model.onnx
src/: async_patterns.rs  config.rs  constants.rs  error.rs  lib.rs  main.rs  performance_opts.rs  raii.rs  types.rs
src/asr/: audio.rs  builder.rs  cuda_pipeline.rs  decoder.rs  decoder_optimized.rs  incremental.rs  lockfree_memory.rs  memory.rs  mod.rs  pipeline.rs  simd.rs  simd_advanced.rs  simd_optimized.rs  traits.rs  types.rs  weaving.rs  zero_copy.rs
src/cuda/: async_stream.rs  cuda_helper.cu  device_buffer.rs  mod.rs
src/performance/: affinity.rs  mod.rs  numa_aware.rs  specialized_pools.rs
src/platform/: affinity_management.rs  capabilities.rs  cloud_detection.rs  detection.rs  init.rs  io_backend.rs  mod.rs  numa_management.rs
src/reliability/: circuit_breaker.rs  graceful_shutdown.rs  metrics.rs  mod.rs  tracing.rs  tracing_config.rs
src/server/: handlers.rs  io_uring_websocket.rs  metrics.rs  mod.rs  state.rs  stream.rs
src/triton/: client.rs  mod.rs  model.rs  pool.rs  pool_optimized.rs  reliable_client.rs  types.rs
src/triton_backends/k2_decoder/: CMakeLists.txt  k2_decoder_backend.cc
