[package]
name = "amira-rust-asr-server"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "amira-rust-asr-server"
path = "src/main.rs"

[lib]
name = "amira_rust_asr_server"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["ws", "json", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# gRPC for Triton
tonic = { version = "0.10", features = ["transport", "tls"] }
prost = "0.12"

# High-performance utilities
bytes = "1.5"
futures = "0.3"
dashmap = "5.5"
parking_lot = "0.12"
crossbeam = "0.8"
once_cell = "1.19"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
async-trait = "0.1"

[build-dependencies]
tonic-build = "0.10"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.release.package."*"]
opt-level = 3
codegen-units = 1 