[package]
name = "amira-rust-asr-server"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "amira-rust-asr-server"
path = "src/main.rs"

[[bin]]
name = "test-connection-pool"
path = "src/bin/test_connection_pool.rs"

[lib]
name = "amira_rust_asr_server"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["ws", "json", "macros"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Circuit breakers and reliability
tower-limit = "0.3"
tower-timeout = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# gRPC for Triton
tonic = { version = "0.10", features = ["transport", "tls"] }
prost = "0.12"

# High-performance utilities
bytes = "1.5"
futures = "0.3"
dashmap = "5.5"
parking_lot = "0.12"
crossbeam = "0.8"
once_cell = "1.19"

# Performance optimization dependencies
core_affinity = "0.8"           # CPU affinity management
wide = "0.7"                   # Additional SIMD support
libc = "0.2"                   # For system calls (NUMA detection)
thiserror = "1.0.69"
uuid = { version = "1.6", features = ["v4", "serde"] }
async-trait = "0.1"

# io_uring support for Linux
[target.'cfg(target_os = "linux")'.dependencies]
tokio-uring = "0.4"             # High-performance io_uring for Linux

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-opentelemetry = "0.22"
opentelemetry = "0.21"
opentelemetry-jaeger = "0.20"

# Metrics and observability
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Error handling
anyhow = "1.0"

# Utilities

# Graceful shutdown
tokio-util = "0.7"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }

[build-dependencies]
tonic-build = "0.10"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"

[[bench]]
name = "phase1_benchmarks"
harness = false

[[bench]]
name = "simple_bench"
harness = false

[[bench]]
name = "connection_pool_bench"
harness = false

[[bench]]
name = "memory_pool_bench"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.release.package."*"]
opt-level = 3
codegen-units = 1 
