[package]
name = "amira-rust-asr-server"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "High-performance real-time Automatic Speech Recognition server with Triton Inference Server integration"
repository = "https://github.com/your-org/amira-rust-asr-server"
homepage = "https://github.com/your-org/amira-rust-asr-server"
documentation = "https://docs.rs/amira-rust-asr-server"
keywords = ["asr", "speech-recognition", "triton", "rnn-t", "real-time"]
categories = ["multimedia::audio", "web-programming::http-server"]
readme = "README.md"

[[bin]]
name = "amira-rust-asr-server"
path = "src/main.rs"

[[bin]]
name = "test-connection-pool"
path = "src/bin/test_connection_pool.rs"

[[bin]]
name = "test-cuda-integration"
path = "src/bin/test_cuda_integration.rs"

[lib]
name = "amira_rust_asr_server"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["ws", "json", "macros"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Circuit breakers and reliability
tower-limit = "0.3"
tower-timeout = "0.3"

# Serialization and configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
serde_yaml = "0.9"
figment = { version = "0.10", features = ["toml", "yaml", "env"] }

# gRPC for Triton
tonic = { version = "0.10", features = ["transport", "tls"] }
prost = "0.12"

# High-performance utilities
bytes = "1.5"
futures = "0.3"
dashmap = "5.5"
parking_lot = "0.12"
crossbeam = "0.8"
once_cell = "1.19"

# Performance optimization dependencies
core_affinity = "0.8"           # CPU affinity management
wide = "0.7"                   # Additional SIMD support
libc = "0.2"                   # For system calls (NUMA detection)
num_cpus = "1.16"              # CPU core detection
thiserror = "1.0.69"
uuid = { version = "1.6", features = ["v4", "serde"] }
async-trait = "0.1"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-opentelemetry = "0.22"
opentelemetry = "0.21"
opentelemetry-jaeger = "0.20"

# io_uring support for Linux
[target.'cfg(target_os = "linux")'.dependencies]
tokio-uring = "0.4"             # High-performance io_uring for Linux

# Metrics and observability
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Error handling
anyhow = "1.0"

# Utilities
reqwest = { version = "0.11", features = ["json"] }  # HTTP client for cloud metadata

# Graceful shutdown
tokio-util = "0.7"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }

[build-dependencies]
tonic-build = "0.10"
cc = { version = "1.0", optional = true }

[features]
default = []
cuda = ["cc"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"
tempfile = "3.0"

[[bench]]
name = "phase1_benchmarks"
harness = false

[[bench]]
name = "simple_bench"
harness = false

[[bench]]
name = "connection_pool_bench"
harness = false

[[bench]]
name = "memory_pool_bench"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.release.package."*"]
opt-level = 3
codegen-units = 1 
